# riff

./: .gitignore  .rubocop.yml  .travis.yml  Cargo.toml  Gemfile  LICENSE  README.md  Rakefile  SCREENSHOTS.md  benchmark.py  ci.sh  install.sh  mypy.ini  release.sh  riff.gemspec  riffdiff.gemspec  stresstest.py  testdata-examples.sh
.cargo/: config  config.toml
.github/workflows/: deployment.yml  homebrew.yml  linux-ci.yml  windows-ci.yml
lib/: colors.rb  diff_string.rb  longest_common_substring.rb  options.rb  pager.rb  refiner.rb  riff.rb  version.rb  whitespace_lint.rb
spec/: added-newline-at-eof.diff  colors_spec.rb  diff_string_spec.rb  no-newline-at-eof-context.diff  plain.diff  refiner_spec.rb  removed-newline-at-eof.diff  riff_spec.rb  version_spec.rb  whitespace_lint_spec.rb
src/: ansi.rs  capture.rs  commit_line.rs  commit_lines.rs  conflict_highlighter.rs  conflicts_highlighter.rs  constants.rs  file_highlighter.rs  formatter.rs  hunk_header.rs  hunk_header_parser.rs  hunk_highlighter.rs  line_collector.rs  lines_highlighter.rs  logging.rs  main.rs  pager.rs  plusminus_header_highlighter.rs  plusminus_lines_highlighter.rs  refiner.rs  rename_highlighter.rs  string_future.rs  token_collector.rs  tokenizer.rs
testdata/: README.md  add-remove-trailing-newline.diff  add-remove-trailing-newline.riff-output  add-trailing-newline.diff  add-trailing-newline.riff-output  adds-only.diff  adds-only.riff-output  afl-crash-repro.diff  binary-files-differ.diff  binary-files-differ.riff-output  changed-lines-without-newlines.diff  changed-lines-without-newlines.riff-output  conflict-markers-diff3-baseless.txt  conflict-markers-diff3-baseless.txt.riff-output  conflict-markers-diff3-removed.txt  conflict-markers-diff3-removed.txt.riff-output  conflict-markers-diff3.txt  conflict-markers-diff3.txt.riff-output  conflict-markers.txt  conflict-markers.txt.riff-output  conflict-with-context.diff  conflict-with-context.riff-output  consecutive-words.diff  consecutive-words.riff-output  copies-and-renames.diff  copies-and-renames.riff-output  dont-highlight-complete-lines.diff  dont-highlight-complete-lines.riff-output  fixme.riff-output  french-trailing-newline.diff  french-trailing-newline.riff-output  git-commit-line.diff  git-commit-line.riff-output  git-conflict-with-base-minus.diff  git-conflict-with-base-minus.riff-output  git-diff-conflict-diff3-edit-remove.diff  git-diff-conflict-diff3-edit-remove.riff-output  git-diff-conflict-diff3.diff  git-diff-conflict-diff3.riff-output  git-diff-conflict.diff  (+48 more)
