# See also .cargo/config

[package]
name = "riff"
version = "0.1.0"
authors = ["Johan Walles <johan.walles@gmail.com>"]
edition = "2018"
repository = "https://github.com/walles/riff/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diffus = "0.9.1"
regex = "1"
lazy_static = "1.4.0"
isatty = "0.1.9"
git-version = "0.3.4"
backtrace = "0.3"
bytecount = "0.6.2"
num_cpus = "1.13.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
tempfile = "3"

# See: https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
debug = 1  # 1 = Line number information only

# Benchmark execution times with different lto settings (lower is better):
# "off" : 67.5ms
# "thin": 40ms
# "fat" : 38.5ms
#
# Let's go with thin which is fast at building but still provides good
# performance.
lto = "thin"

# See: https://doc.rust-lang.org/cargo/reference/profiles.html
# Configure dependencies of the release profile
[profile.release.package."*"]
debug = 0  # 0 = No debug info
